--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TT LECTURE 2404</title>
+    <title>POM LECTURE 2404</title>
     <style>
         body, html {
             height: 100%; 
@@ -13,7 +13,7 @@
             display: flex; 
             justify-content: center; 
             align-items: center; 
-            background: rgb(244, 244, 244);
+            background: rgb(72, 72, 72);
         }
         .scene {
             width: 100vw;
@@ -27,7 +27,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background: rgb(244, 244, 244);
+            background: rgb(72, 72, 72);
             /* border: 1px solid rgba(255, 255, 255, 0); */
         }
         #plane1 {
@@ -185,7 +185,7 @@ function convertImageToBase64(url, callback) {
                 const endY = svgHeight / 2 - (end.lat - coordinates[0].lat) * scale;
                 const pathElement = document.createElementNS("http://www.w3.org/2000/svg", "path");
                 pathElement.setAttribute("d", `M ${startX} ${startY} L ${endX} ${endY}`);
-                pathElement.setAttribute("stroke", "black");
+                pathElement.setAttribute("stroke", "white");
                 pathElement.setAttribute("stroke-width", "1");
                 pathElement.setAttribute("fill", "none");
                 svg.appendChild(pathElement);
