--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
     </div>
 
     <div id="hide-the-text-from-view-because-im-going-to-read-it-in-the-browser-inspector">
-        <!-- ⚙ ⚙ ⚙ As Architect, myopic about what will happen tomorrow, we stretch our boundaries, redefining what is possible. ⚙ ⚙ ⚙ -->
+        <!-- ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ As Architect, myopic about what will happen tomorrow, we stretch our boundaries, redefining what is possible. -->
         <div id="start-from-here">
-<!-- We are microscopic and macroscopic at the intersection of different scales, we are versatile, we adapt, we transform. -->
+<!-- ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ We are microscopic and macroscopic at the intersection of different scales, we are versatile, we adapt, we transform. -->
         </div>
         <div id="then-read-this">
-<!-- So as a designer, considering today's lecture topics on representation and geovisualization, I question how we can extend our knowledge into a not conventional academia. How can we develop new design research models in both digital and physical spaces? -->
+<!-- ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ So as a designer, considering today's lecture topics, I question how we can extend our knowledge into a not conventional academia. How can we develop new design research models in both digital and physical spaces? -->
         </div>
         <div id="dont-forget-this-part">
-<!-- The process of deconstructing the abstract and contested territory of mapping and cartography involves analyzing data and information with the aims to reveal the critical spatial dimensions they can assume as contemporary media. -->
+<!-- ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ The process of deconstructing the abstract and contested territory of mapping and cartography involves analyzing data and information with the aims to reveal the critical spatial dimensions they can assume as contemporary media. -->
         </div>
         <div id="add-this-maybe-yes-maybe-no">
-<!-- To further deconstruct this space of information, I will now build on the evolution of the previous question. Being critical of the data we use means being aware of the concept of uncertainty. -->
+<!-- ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ To further deconstruct this space of information, I will now build on the evolution of the previous question. Being critical of the data we use means being aware of the concept of uncertainty and unpredictability. -->
         </div>
         <div id="go-to-the-presentation">
-<!-- https://luciarebolino.github.io/CSR-LR-webpres/ -->
+<!-- ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ ⚙ https://luciarebolino.github.io/CSR-LR-webpres/ -->
         </div>
         <div id="is-there-still-some-time-?">
 <!-- https://www.bordoclima.com/-->
