--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POM LECTURE 240422</title>
+    <title>Lecture</title>
     <style>
         body, html {
             height: 100%; 
